syntax = "proto2";

package rv.protos;

message LabelItem {
    required int32 id = 1;
    required string name = 2;
}
